[build-system]
requires = [
    "hatchling",
    "jupyterlab>=3.0.0,==3.*",
]
build-backend = "hatchling.build"

[project]
name = "ipyuploads"
description = "A Jupyter file widget with chunked upload capabilities"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Thorin Tabor", email = "tmtabor@cloud.ucsd.edu" },
]
keywords = [
    "ipython",
    "jupyter",
    "widgets",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "ipywidgets>=7,<9",
]
version = "0.2.1"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/g2nb/ipyuploads"

[tool.hatch.build.targets.wheel.shared-data]
"ipyuploads/nbextension/*.*" = "share/jupyter/nbextensions/@g2nb/ipyuploads/*.*"
"ipyuploads/labextension" = "share/jupyter/labextensions/@g2nb/ipyuploads"
"./install.json" = "share/jupyter/labextensions/@g2nb/ipyuploads/install.json"
"./@g2nb/ipyuploads.json" = "etc/jupyter/nbconfig/notebook.d/@g2nb/ipyuploads.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "js/dist/index.js",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]
build-function = "hatch_jupyter_builder.npm_builder"

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build:prod"
npm = [
    "yarn",
]

[tool.tbump]
github_url = "https://github.com/g2nb/ipyuploads"

[tool.tbump.version]
current = "0.2.1"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+))?
  (\.
    (?P<dev>dev\d*)
  )?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}\""

[[tool.tbump.file]]
src = "js/package.json"
version_template = "{major}.{minor}.{patch}"
